export enum Role {
  OWNER = 'owner',
  CO_OWNER = 'co_owner',
  ADMIN = 'admin',
}
